<resources>
    <string name="app_name">wearOsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluetooth">Bluetooth\n</string>

    <!-- BLUETOOTH-->
    <string name="text_bluetooth">Activate Bluetooth and make sure that the Bluetooth of your Canicom GPS remote control is also activated</string>
    <string name="analyze">Search</string>
    <string name="connected">Connected</string>
    <string name="connect_fail">Connect fail</string>
    <string name="device_is_not_connected">Device not connected</string>
    <string name="connecting">Connexion…</string>
    <string name="canicomgps_whats_to_pair_with_your_smartphone_enter_the_pairing_password">Canicom GPS whats to pair with your smartphone. Enter the pairing password</string>
    <string name="psw_error">error password</string>
    <string name="disconnect">Disconnected</string>
    <string name="already_connect">You are already logged in</string>
    <string name="attention">Attention</string>
    <string name="message_sensor">Your device does not have the necessary sensors to use the compass.</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="delete">Delete</string>
    <string name="loading">loading\n\n</string>
    <string name="blue_not_supported">Bluetooth not supported</string>
    <string name="bluetooth_pairing_requested">Bluetooth pairing requested\n Canicom GPS</string>
    <string name="confirm">Confirm\n</string>
    <string name="_0">0°</string>
    <string name="dog_item">DOG</string>
    <string name="battery_stat">0%</string>
    <string name="battery">Battery : </string>
    <string name="distance">0m</string>
    <string name="date_time">date time</string>
    <string name="compass">compass\n</string>
    <string name="enter_valid_password">Enter valid password</string>
</resources>