<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_bluetooth_logo_icon_170466" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_bluetooth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/bluetooth"
            android:background="@drawable/style_track_add_fence"
            android:padding="3dp"
            android:textColor="#000000"
            android:minHeight="28dp"
            android:textSize="12sp"
            android:textColorHint="#616161"
            android:textStyle="normal"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView_title_not"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/light_orange"
            android:padding="3dp"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="8sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_bluetooth_title"/>

        <TextView
            android:id="@+id/textView_connected"
            android:layout_width="135dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/style_text_dialog_ble"
            android:padding="3dp"
            android:text="@string/connected"
            android:textColor="@android:color/black"
            android:textSize="8sp"
            app:drawableStartCompat="@drawable/ic_round_bluetooth_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_not" />

        <TextView
            android:id="@+id/textView_disconnected"
            android:layout_width="135dp"
            android:layout_height="15dp"
            android:layout_marginTop="2dp"
            android:background="@color/light_grey"
            android:padding="3dp"
            android:text="@string/disconnect"
            android:textColor="@android:color/black"
            android:textSize="8sp"
            app:drawableStartCompat="@drawable/ic_round_bluetooth_disabled_24_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_connected" />

        <TextView
            android:id="@+id/textView_delete_bluetooth"
            android:layout_width="135dp"
            android:layout_height="15dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/style_dialog_text_down"
            android:padding="3dp"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:textSize="8sp"
            app:drawableStartCompat="@drawable/ic_round_delete_24"
            app:layout_constraintTop_toBottomOf="@+id/textView_disconnected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageButton_close_bluetooth"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_round_close_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>
